# ScrapHacks

./: callbacks.md  sort_voices.py  voices.txt
notes/src/: Callbacks.md  SUMMARY.md
scrapper_web/: package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.cjs  vite.config.js
scrapper_web/scrapper/: Cargo.toml  README.md
scrapper_web/scrapper/src/: lib.rs
scrapper_web/src/: App.svelte  app.pcss  main.js  scrapper.worker.js
scrapper_web/src/lib/: Explorer.svelte  TreeView.svelte
tools/ghidra_scripts/: Scrap_analyze.py  callbacks_to_md.py  mark_up_py.py
tools/remaster/scrap_net/: Cargo.toml  get_app.py
tools/remaster/scrap_net/src/: hex_ii.rs  main.rs  parser.rs
tools/remaster/scrap_parse/: .gitignore  Cargo.toml  README.md  blender_import.py  build.py  get_vertex_size.cpp  notes.md  packed_loader.py  pyproject.toml
tools/remaster/scrap_parse/ScraplandTool/: __init__.py  arrange_nodes.py  level_import.py  packed_browser.py
tools/remaster/scrap_parse/blender_plugin/: __init__.py  level_import.py  packed_browser.py
tools/remaster/scrap_parse/scripts/: count_node_types.py  find_3d_rotation_matrices.py
tools/remaster/scrap_parse/src/: find_scrap.rs  lib.rs  main.rs  packed_vfs.rs  pixel_shader.rs
tools/remaster/scraphacks_rs/: Cargo.toml  Save0.sav.json  build.sh  notes.md  run.py  scrap.hpp
tools/remaster/scraphacks_rs/src/: config.rs  discord.rs  lib.rs  lua.rs  mem.rs  parser.rs  scrap.rs
