[package]
name = "scrap_parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "scrap_parse"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.69"
binrw = "0.13.3"
chrono = { version = "0.4.23", features = ["serde"] }
configparser = { version = "3.0.3", features = ["indexmap"] }
fs-err = "2.9.0"
indexmap = { version = "2.1", features = ["serde"] }
memmap2 = "0.9.0"
rhexdump = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
steamlocate = "1.1.0"
walkdir = "2.3.3"
bilge = "0.2.0"
vfs = "0.10.0"
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37","generate-import-lib"] }
pythonize = "0.20.0"
enum-iterator = "1.4.1"
serde_json = { version = "1.0.108", features = ["preserve_order", "unbounded_depth"] }
num-derive = "0.4.1"
num-traits = "0.2.17"
